# router

./: .gitkeep  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
changelog.d/: 20260319_040000_router_prototype.md  20260319_120000_readme_documentation.md  20260417_llm_gateway_compliance.md  20260423_120000_issue_7_case_study.md  20260503_120000_issue_7_full_router.md  20260503_140000_issue_9_case_study.md
docs/case-studies/issue-5/: README.md
docs/case-studies/issue-7/: README.md  current-router-gap-analysis.md  external-projects.md  online-research.md  requirements.md
docs/case-studies/issue-7/raw/: AntonioAEMartins__claude-code-proxy.README.md  AntonioAEMartins__claude-code-proxy.metadata.json  Arasple__pluribus.README.md  Arasple__pluribus.metadata.json  GodYeh__claude-max-api-proxy.metadata.json  NYTEMODEONLY__claude-max-proxy.README.md  NYTEMODEONLY__claude-max-proxy.metadata.json  dtzp555-max__ocp.README.md  dtzp555-max__ocp.metadata.json  mattschwen__claude-max-api-proxy.metadata.json  meaning-systems__claude-code-proxy.metadata.json  readme-keywords.txt  sethschnrt__claude-max-api-proxy.README.md  sethschnrt__claude-max-api-proxy.metadata.json  thhuang__claude-max-api-proxy-rs.metadata.json  wende__claude-max-api-proxy.metadata.json
docs/case-studies/issue-9/: README.md  current-router-gap-analysis.md  external-projects.md  online-research.md  requirements.md
docs/case-studies/issue-9/raw/: BerriAI_litellm.metadata.json  JuliusBrussee_caveman.metadata.json  decolua_9router.metadata.json  diegosouzapw_OmniRoute.README.md  diegosouzapw_OmniRoute.metadata.json  musistudio_claude-code-router.metadata.json  router-for-me_CLIProxyAPI.metadata.json
examples/: basic_usage.rs
scripts/: check-changelog-fragment.rs  check-release-needed.rs  check-version-modification.rs  create-changelog-fragment.rs  create-github-release.rs  test-manual.sh  version-and-commit.rs
src/: accounts.rs  cli.rs  config.rs  lib.rs  main.rs  metrics.rs  oauth.rs  openai.rs  proxy.rs  storage.rs  token.rs
tests/: integration_test.rs
(+5 files in other folders)
