[package]
name = "link-assistant-router"
version = "0.6.0"
edition = "2021"
description = "Link.Assistant.Router — Claude MAX OAuth proxy and token gateway for Anthropic APIs"
readme = "README.md"
license = "Unlicense"
keywords = ["proxy", "anthropic", "claude", "gateway", "oauth"]
categories = ["web-programming::http-server"]
repository = "https://github.com/link-assistant/router"
documentation = "https://github.com/link-assistant/router"
rust-version = "1.70"

[lib]
name = "link_assistant_router"
path = "src/lib.rs"

[[bin]]
name = "link-assistant-router"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "signal", "fs", "process", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log-lazy = "0.1"
bytes = "1.0"
futures-util = "0.3"
http = "1.0"
http-body-util = "0.1"
lino-arguments = "0.3"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
